feat: added search for all products
