# swagger/spec.json
@@ -54,6 +54,55 @@
           }
         }
       }
+    },
+    "/v1/supermarkets/{cep}/products": {
+      "get": {
+        "summary": "Your GET endpoint",
+        "tags": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductResponse"
+                },
+                "examples": {
+                  "example-product": {
+                    "$ref": "#/components/examples/ProductExample"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequestError"
+          }
+        },
+        "operationId": "get-supermarkets-products",
+        "description": "",
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "name": "name",
+            "description": "Busca pelo nome do produto"
+          }
+        ]
+      },
+      "parameters": [
+        {
+          "schema": {
+            "type": "string"
+          },
+          "name": "cep",
+          "in": "path",
+          "required": true,
+          "description": "Número do CEP"
+        }
+      ]
     }
   },
   "components": {
@@ -85,6 +134,136 @@
               "example": true
             }
           }
+        }
+      },
+      "ProductResponse": {
+        "type": "array",
+        "description": "",
+        "minItems": 1,
+        "uniqueItems": true,
+        "x-examples": {
+          "example-1": [
+            {
+              "_id": "609330b0642b8120248dd5fc",
+              "name": "Cerveja BUDWEISER Lata 350ml",
+              "brand": "Budweiser",
+              "categories": {
+                "first": "60932a930710622024cad153",
+                "second": "60932b250710622024cad1a1",
+                "third": "60932bdb0710622024cad36a"
+              },
+              "image": "https://i.ibb.co/3sDQSbD/bud-latinha.jpg",
+              "material": "Lata",
+              "volume": "350 ml",
+              "amount": "1",
+              "prices": [
+                {
+                  "_id": "609589da0710622024cad3a3",
+                  "id_supermarket": "60848b9c504e7f1bb1feb73d",
+                  "name": "São Vicente",
+                  "price": 2.65
+                },
+                {
+                  "_id": "609589da0710622024cad3a1",
+                  "id_supermarket": "608481c0504e7f1bb1feb73a",
+                  "name": "Carrefour",
+                  "price": 2.9
+                },
+                {
+                  "_id": "609589da0710622024cad3a4",
+                  "id_supermarket": "60848bc7504e7f1bb1feb73e",
+                  "name": "Dia%",
+                  "price": 2.91
+                },
+                {
+                  "_id": "609589da0710622024cad3a5",
+                  "id_supermarket": "60848c10504e7f1bb1feb73f",
+                  "name": "Makro Atacadista",
+                  "price": 2.91
+                },
+                {
+                  "_id": "609589da0710622024cad3a0",
+                  "id_supermarket": "60845d5468c33834de710e19",
+                  "name": "Hipermercado Extra",
+                  "price": 2.94
+                }
+              ]
+            }
+          ]
+        },
+        "items": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "minLength": 1
+            },
+            "name": {
+              "type": "string",
+              "minLength": 1
+            },
+            "brand": {
+              "type": "string",
+              "minLength": 1
+            },
+            "image": {
+              "type": "string",
+              "minLength": 1
+            },
+            "material": {
+              "type": "string",
+              "minLength": 1
+            },
+            "volume": {
+              "type": "string",
+              "minLength": 1
+            },
+            "amount": {
+              "type": "string",
+              "minLength": 1
+            },
+            "prices": {
+              "type": "array",
+              "uniqueItems": true,
+              "minItems": 1,
+              "items": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "minLength": 1
+                  },
+                  "id_supermarket": {
+                    "type": "string",
+                    "minLength": 1
+                  },
+                  "name": {
+                    "type": "string",
+                    "minLength": 1
+                  },
+                  "price": {
+                    "type": "number"
+                  }
+                },
+                "required": [
+                  "_id",
+                  "id_supermarket",
+                  "name",
+                  "price"
+                ]
+              }
+            }
+          },
+          "required": [
+            "_id",
+            "name",
+            "brand",
+            "image",
+            "material",
+            "volume",
+            "amount",
+            "prices"
+          ]
         }
       }
     },
@@ -139,6 +318,53 @@
             }
           }
         }
+      }
+    },
+    "examples": {
+      "ProductExample": {
+        "value": [
+          {
+            "_id": "609330b0642b8120248dd5fc",
+            "name": "Cerveja BUDWEISER Lata 350ml",
+            "brand": "Budweiser",
+            "image": "https://i.ibb.co/3sDQSbD/bud-latinha.jpg",
+            "material": "Lata",
+            "volume": "350 ml",
+            "amount": "1",
+            "prices": [
+              {
+                "_id": "609589da0710622024cad3a3",
+                "id_supermarket": "60848b9c504e7f1bb1feb73d",
+                "name": "São Vicente",
+                "price": 2.65
+              },
+              {
+                "_id": "609589da0710622024cad3a1",
+                "id_supermarket": "608481c0504e7f1bb1feb73a",
+                "name": "Carrefour",
+                "price": 2.9
+              },
+              {
+                "_id": "609589da0710622024cad3a4",
+                "id_supermarket": "60848bc7504e7f1bb1feb73e",
+                "name": "Dia%",
+                "price": 2.91
+              },
+              {
+                "_id": "609589da0710622024cad3a5",
+                "id_supermarket": "60848c10504e7f1bb1feb73f",
+                "name": "Makro Atacadista",
+                "price": 2.91
+              },
+              {
+                "_id": "609589da0710622024cad3a0",
+                "id_supermarket": "60845d5468c33834de710e19",
+                "name": "Hipermercado Extra",
+                "price": 2.94
+              }
+            ]
+          }
+        ]
       }
     }
   }
